# a6r-tools

./: .gitignore  CMakeLists.txt  a6r-console.cpp  package-lock.json  tinysa4.py
.github/workflows/: build-cxx.yml  build-tinysa4.yml  build.yml  check-adc-convert.diff  ci.yml  dump-unknown.diff  log-unknown-hw+adc1-cmd.diff  log-unknown-hw.diff  publish-pages.yml  test-python.yml  tinysa-adc-lock.diff
a6r-core/: CMakeLists.txt  binstream.cpp  binstream.h  bmpfile.cpp  bmpfile.h  tinysa4-device.cpp  tinysa4-device.h  tinysa4-preset.cpp  tinysa4-preset.h  tinysa4.cpp  tinysa4.h
data/: 123.csv  4markers.cmd  6markers.cmd  8markers.cmd  capture.raw  multi-band.json  multi1.json  multi2.json  multi2.prs  scan.csv  startup.json  startup.prs
html/: test.csv  tinysa-trace-viewer.html
python/: .gitignore  a6r-bmp.py  a6r-prs.py  a6r-rc.py  a6r-sanitize-prs.py  a6r-stm.py  bmpfile.py  convert_bmp.py  librevnadevinfo.py  remotecontrol.py  tinysa4.py  tinysa4preset.py
python/testdata/: multi1.prs
serialport/: CMakeLists.txt  config.h  libserialport.h
